overflow-x bug fixed

--- a/zestpkg/static/css/custom.css
+++ b/zestpkg/static/css/custom.css
@@ -4,7 +4,10 @@ body, p, li, span{
     font-family: 'Open Sans', sans-serif;
     font-size: 16px;
     color: #696969;
-    overflow-x: hidden;
+}
+
+body{
+	overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5, h6{
